@@ -1,171 +1,70 @@
 ---
 title: "OpenSearch Service"
 linkTitle: "OpenSearch Service"
-categories: ["LocalStack Community"]
 description: >
-  Get started with Amazon OpenSearch Service on LocalStack
-aliases:
-  - /aws/opensearch/
+  Get started with OpenSearch Service on LocalStack
 ---
 
-The OpenSearch Service in LocalStack lets you create one or more single-node OpenSearch clusters that behave like the [Amazon OpenSearch Service](https://aws.amazon.com/opensearch-service/).
-This service, like its AWS counterpart, is closely coupled with the [Elasticsearch Service](../elasticsearch).
-Any cluster created with the OpenSearch Service will show up in the Elasticsearch Service and vice versa.
+## Introduction
 
-Following versions of OpenSearch are supported:
+OpenSearch Service is an open-source search and analytics engine, offering developers and organizations advanced search capabilities, robust data analysis, and insightful visualizations. OpenSearch Service also offers log analytics, real-time application monitoring, and clickstream analysis. The following versions of OpenSearch Service are supported by LocalStack:
 
 - 1.0
 - 1.1
 - 1.2
 - 1.3
-- 2.3 (default)
+- 2.3
+- 2.7
+- 2.9 (**default**)
 
-{{< alert title="Warning" color="warning">}}
-LocalStack uses the [OpenSearch Python client 2.x](https://github.com/opensearch-project/opensearch-py) internally.
+LocalStack supports OpenSearch Service via the Community offering, allowing you to use the OpenSearch Service APIs in your local environment to create, manage, and operate the OpenSearch clusters. The supported APIs are available on our [API coverage page](https://docs.localstack.cloud/references/coverage/coverage_opensearch/), which provides information on the extent of OpenSearch's integration with LocalStack. 
 
-Features that were deprecated in OpenSearch 1.x and removed in OpenSearch 2.x are not guaranteed to work when using OpenSearch 1.x clusters with LocalStack.
-[More details here](https://github.com/opensearch-project/opensearch-py/blob/main/COMPATIBILITY.md).
-{{< /alert >}}
+OpenSearch is closely coupled with the [Elasticsearch Service](../elasticsearch). Clusters generated through the OpenSearch Service will be visible within the Elasticsearch Service interface, and vice versa. You can select an Elasticsearch version with the `--engine-version` parameter while creating an OpenSearch Service domain.
 
+## Getting started
 
-## Creating an OpenSearch cluster
+This guide is designed for users new to OpenSearch Service and assumes basic knowledge of the AWS CLI and our [`awslocal`](https://github.com/localstack/awscli-local) wrapper script.
 
-You can go ahead and use [awslocal]({{< ref "aws-cli.md#localstack-aws-cli-awslocal" >}}) to create a new OpenSearch domain via the `aws opensearch create-domain` command.
+Start your LocalStack container using your preferred method. We will demonstrate how to create a new OpenSearch Service cluster and interact with it, using the AWS CLI.
 
-{{< alert title="Note" >}}
-Every time when you create a cluster with a version of OpenSearch you haven't used before, the OpenSearch binary for the respective version needs to be downloaded, which may take a while.
-{{< /alert >}}
+### Creating an OpenSearch cluster
+
+To create an OpenSearch Service cluster, you can use the [`CreateDomain`](https://docs.aws.amazon.com/opensearch-service/latest/APIReference/API_CreateDomain.html) API. OpenSearch Service domain is synonymous with an OpenSearch cluster. Execute the following command to create a new OpenSearch domain:
 
 {{< command >}}
 $ awslocal opensearch create-domain --domain-name my-domain
-{
-    "DomainStatus": {
-        "DomainId": "000000000000/my-domain",
-        "DomainName": "my-domain",
-        "ARN": "arn:aws:es:us-east-1:000000000000:domain/my-domain",
-        "Created": true,
-        "Deleted": false,
-        "Endpoint": "my-domain.us-east-1.opensearch.localhost.localstack.cloud:4566",
-        "Processing": true,
-        "UpgradeProcessing": false,
-        "EngineVersion": "OpenSearch_1.1",
-        "ClusterConfig": {
-            "InstanceType": "m3.medium.search",
-            "InstanceCount": 1,
-            "DedicatedMasterEnabled": true,
-            "ZoneAwarenessEnabled": false,
-            "DedicatedMasterType": "m3.medium.search",
-            "DedicatedMasterCount": 1,
-            "WarmEnabled": false,
-            "ColdStorageOptions": {
-                "Enabled": false
-            }
-        },
-        "EBSOptions": {
-            "EBSEnabled": true,
-            "VolumeType": "gp2",
-            "VolumeSize": 10,
-            "Iops": 0
-        },
-        "AccessPolicies": "",
-        "SnapshotOptions": {
-            "AutomatedSnapshotStartHour": 0
-        },
-        "CognitoOptions": {
-            "Enabled": false
-        },
-        "EncryptionAtRestOptions": {
-            "Enabled": false
-        },
-        "NodeToNodeEncryptionOptions": {
-            "Enabled": false
-        },
-        "AdvancedOptions": {
-            "override_main_response_version": "false",
-            "rest.action.multi.allow_explicit_index": "true"
-        },
-        "ServiceSoftwareOptions": {
-            "CurrentVersion": "",
-            "NewVersion": "",
-            "UpdateAvailable": false,
-            "Cancellable": false,
-            "UpdateStatus": "COMPLETED",
-            "Description": "There is no software update available for this domain.",
-            "AutomatedUpdateDate": 0.0,
-            "OptionalDeployment": true
-        },
-        "DomainEndpointOptions": {
-            "EnforceHTTPS": false,
-            "TLSSecurityPolicy": "Policy-Min-TLS-1-0-2019-07",
-            "CustomEndpointEnabled": false
-        },
-        "AdvancedSecurityOptions": {
-            "Enabled": false,
-            "InternalUserDatabaseEnabled": false
-        },
-        "AutoTuneOptions": {
-            "State": "ENABLE_IN_PROGRESS"
-        }
-    }
-}
-
 {{< / command >}}
 
-In the LocalStack log you will see something like, where you can see the cluster starting up in the background.
+Each time you establish a cluster using a new version of OpenSearch, the corresponding OpenSearch binary must be downloaded, a process that might require some time to complete. In the LocalStack log you will see something like, where you can see the cluster starting up in the background.
 
-```plaintext
-2022-01-13T10:36:29.436:INFO:localstack.services.opensearch.cluster: starting opensearch: /var/lib/localstack/libs/opensearch/1.1.0/bin/opensearch -E http.port=35403 -E http.publish_port=35403 -E transport.port=0 -E network.host=127.0.0.1 -E http.compression=false -E path.data="/var/lib/localstack/opensearch/arn:aws:es:us-east-1:000000000000:domain/my-domain/data" -E path.repo="/var/lib/localstack/opensearch/arn:aws:es:us-east-1:000000000000:domain/my-domain/backup" -E plugins.security.disabled=true with env {'OPENSEARCH_JAVA_OPTS': '-Xms200m -Xmx600m', 'OPENSEARCH_TMPDIR': '/var/lib/localstack/opensearch/arn:aws:es:us-east-1:000000000000:domain/my-domain/tmp'}
-2022-01-13T10:36:29.437:INFO:localstack.services.opensearch.cluster: registering an endpoint proxy for http://my-domain.us-east-1.opensearch.localhost.localstack.cloud:4566 => http://127.0.0.1:35403
-2022-01-13T10:36:32.803:INFO:localstack.services.opensearch.cluster: [2022-01-13T10:36:32,800][INFO ][o.o.n.Node               ] [host-pc] version[1.1.0], pid[231895], build[tar/15e9f137622d878b79103df8f82d78d782b686a1/2021-10-04T21:29:03.079792Z], OS[Linux/5.11.0-46-generic/amd64], JVM[AdoptOpenJDK/OpenJDK 64-Bit Server VM/15.0.1/15.0.1+9]
-2022-01-13T10:36:32.805:INFO:localstack.services.opensearch.cluster: [2022-01-13T10:36:32,805][INFO ][o.o.n.Node               ] [host-pc] JVM home [/var/lib/localstack/libs/opensearch/1.1.0/jdk], using bundled JDK [true]
-2022-01-13T10:36:32.806:INFO:localstack.services.opensearch.cluster: [2022-01-13T10:36:32,805][INFO ][o.o.n.Node               ] [host-pc] JVM arguments [-Xshare:auto, -Dopensearch.networkaddress.cache.ttl=60, -Dopensearch.networkaddress.cache.negative.ttl=10, -XX:+AlwaysPreTouch, -Xss1m, -Djava.awt.headless=true, -Dfile.encoding=UTF-8, -Djna.nosys=true, -XX:-OmitStackTraceInFastThrow, -XX:+ShowCodeDetailsInExceptionMessages, -Dio.netty.noUnsafe=true, -Dio.netty.noKeySetOptimization=true, -Dio.netty.recycler.maxCapacityPerThread=0, -Dio.netty.allocator.numDirectArenas=0, -Dlog4j.shutdownHookEnabled=false, -Dlog4j2.disable.jmx=true, -Djava.locale.providers=SPI,COMPAT, -XX:+UseG1GC, -XX:G1ReservePercent=25, -XX:InitiatingHeapOccupancyPercent=30, -Djava.io.tmpdir=/var/lib/localstack/opensearch/arn:aws:es:us-east-1:000000000000:domain/my-domain/tmp, -XX:+HeapDumpOnOutOfMemoryError, -XX:HeapDumpPath=data, -XX:ErrorFile=logs/hs_err_pid%p.log, -Xlog:gc*,gc+age=trace,safepoint:file=logs/gc.log:utctime,pid,tags:filecount=32,filesize=64m, -Xms200m, -Xmx600m, -XX:MaxDirectMemorySize=314572800, -Dopensearch.path.home=/var/lib/localstack/libs/opensearch/1.1.0, -Dopensearch.path.conf=/var/lib/localstack/libs/opensearch/1.1.0/config, -Dopensearch.distribution.type=tar, -Dopensearch.bundled_jdk=true]
-...
-```
-
-and after some time, you should see that the `Processing` state of the domain is set to `false`:
+You can open the LocalStack logs, to see that the OpenSearch Service cluster is being created in the background. You can use the [`DescribeDomain`](https://docs.aws.amazon.com/opensearch-service/latest/APIReference/API_DescribeDomain.html) API to check the status of the cluster:
 
 {{< command >}}
-$ awslocal opensearch describe-domain --domain-name my-domain | jq ".DomainStatus.Processing"
-false
+$ awslocal opensearch describe-domain \
+    --domain-name my-domain | jq ".DomainStatus.Processing"
 {{< / command >}}
 
-### Creating an Elasticsearch cluster
+The `Processing` attribute will be `false` once the cluster is up and running. Once the cluster is up, you can interact with the cluster.
 
-Like in AWS, the OpenSearch service can create Elasticsearch clusters and manage them.
-To do so, you can use [awslocal]({{< ref "aws-cli.md#localstack-aws-cli-awslocal" >}}) and select an Elasticsearch version with the `--engine-version` parameter of the `awslocal opensearch create-domain` command.
-For an overview of existing Elasticsearch versions you can use `awslocal opensearch list-versions`.
-
-## Interact with the cluster
+### Interact with the cluster
 
 You can now interact with the cluster at the cluster API endpoint for the domain, in this case `http://my-domain.us-east-1.opensearch.localhost.localstack.cloud:4566`.
 
-For example:
+Run the following command to get the cluster health:
 
 {{< command >}}
 $ curl http://my-domain.us-east-1.opensearch.localhost.localstack.cloud:4566
-{
-  "name" : "host-pc",
-  "cluster_name" : "opensearch",
-  "cluster_uuid" : "DMN-2TlwRkuhMH4aRRqrkA",
-  "version" : {
-    "distribution" : "opensearch",
-    "number" : "1.1.0",
-    "build_type" : "tar",
-    "build_hash" : "15e9f137622d878b79103df8f82d78d782b686a1",
-    "build_date" : "2021-10-04T21:29:03.079792Z",
-    "build_snapshot" : false,
-    "lucene_version" : "8.9.0",
-    "minimum_wire_compatibility_version" : "6.8.0",
-    "minimum_index_compatibility_version" : "6.0.0-beta1"
-  },
-  "tagline" : "The OpenSearch Project: https://opensearch.org/"
-}
 {{< / command >}}
 
-Or the health endpoint:
+You can verify that the cluster is up and running by checking the cluster health:
 
 {{< command >}}
 $ curl -s http://my-domain.us-east-1.opensearch.localhost.localstack.cloud:4566/_cluster/health | jq .
+{{< / command >}}
+
+The following output will be visible on your terminal:
+
+```json
 {
   "cluster_name": "opensearch",
   "status": "green",
@@ -184,57 +83,49 @@ $ curl -s http://my-domain.us-east-1.opensearch.localhost.localstack.cloud:4566/
   "task_max_waiting_in_queue_millis": 0,
   "active_shards_percent_as_number": 100
 }
-{{< / command >}}
+```
 
-
-
-## Advanced topics
-
-### Endpoints
+## Domain Endpoints
 
 There are two configurable strategies that govern how domain endpoints are created. The strategy can be configured via the `OPENSEARCH_ENDPOINT_STRATEGY` environment variable.
 
-| Value | Format | Description |
-| - | - | - |
-| `domain` | `<domain-name>.<region>.<engine-type>.localhost.localstack.cloud:4566` | This is the default strategy that uses the `localhost.localstack.cloud` domain to route to your localhost |
-| `path` | `localhost:4566/<engine-type>/<region>/<domain-name>` | An alternative that can be useful if you cannot resolve LocalStack's localhost domain |
-| `port` | `localhost:<port-from-range>` | Exposes the cluster(s) directly with ports from [the external service port range]({{< ref "external-ports" >}})|
+| Value   | Format                                                                              | Description                                                                                           |
+| ------- | ----------------------------------------------------------------------------------- | ----------------------------------------------------------------------------------------------------- |
+| `domain` | `<domain-name>.<region>.<engine-type>.localhost.localstack.cloud:4566`             | The default strategy employing the `localhost.localstack.cloud` domain for routing to localhost.     |
+| `path`   | `localhost:4566/<engine-type>/<region>/<domain-name>`                              | An alternative strategy useful if resolving LocalStack's localhost domain poses difficulties.       |
+| `port`   | `localhost:<port-from-range>`                                                      | Directly exposes cluster(s) via ports from [the external service port range]({{< ref "external-ports" >}}). |
 
-Regardless of the service from which the clusters were created, the domain of the cluster always corresponds to the engine type (OpenSearch or Elasticsearch) of the cluster.
-OpenSearch cluster therefore have `opensearch` in their domain (e.g. `my-domain.us-east-1.opensearch.localhost.localstack.cloud:4566`) and Elasticsearch clusters have `es` in their domain (e.g. `my-domain.us-east-1.es.localhost.localstack.cloud:4566`)
+Irrespective of the originating service for the clusters, the domain of each cluster consistently aligns with its engine type, be it OpenSearch or Elasticsearch. Consequently, OpenSearch clusters incorporate `opensearch` within their domains (e.g., `my-domain.us-east-1.opensearch.localhost.localstack.cloud:4566`), while Elasticsearch clusters feature `es` in their domains (e.g., `my-domain.us-east-1.es.localhost.localstack.cloud:4566`).
 
-#### Custom Endpoints
+## Custom Endpoints
 
-LocalStack allows you to set arbitrary custom endpoints for your clusters in the domain endpoint options.
-This can be used to overwrite the behavior of the endpoint strategies described above.
-You can also choose custom domains, however it is important to add the edge port (`80`/`443` or by default `4566`).
+LocalStack allows you to define arbitrary endpoints for your clusters within the domain endpoint options. This functionality can be used to overwrite the behavior of the aforementioned endpoint strategies. Moreover, you can opt for custom domains, though it's important to incorporate the edge port (80/443, or the default 4566).
+
+Run the following command to create a new OpenSearch domain with a custom endpoint:
 
 {{< command >}}
 $ awslocal opensearch create-domain --domain-name my-domain \
       --domain-endpoint-options '{ "CustomEndpoint": "http://localhost:4566/my-custom-endpoint", "CustomEndpointEnabled": true }'
 {{< / command >}}
 
-Once the domain processing is complete, you can access the cluster:
+After the domain processing is complete, you can access the cluster using the custom endpoint:
 
 {{< command >}}
 $ curl http://localhost:4566/my-custom-endpoint/_cluster/health
 {{< / command >}}
 
+## Re-using a single cluster instance
 
-### Re-using a single cluster instance
+In certain scenarios, creating a distinct cluster instance for each domain might not align with your use-case. For example, if your focus is solely on testing API interactions rather than actual OpenSearch functionality, individual clusters might be excessive. In such situations, the option to set `OPENSEARCH_MULTI_CLUSTER=0` exists, allowing all domains to be funneled into a single cluster instance.
 
-In some cases, you may not want to create a new cluster instance for each domain,
-for example when you are only interested in testing API interactions instead of actual OpenSearch functionality.
-In this case, you can set `OPENSEARCH_MULTI_CLUSTER=0`, which will multiplex all domains to the same cluster.
-This can however lead to unexpected behavior when persisting data into OpenSearch, or creating clusters with different versions, so we do not recommend it.
+However, it's important to be aware that it can introduce unexpected complications. This is particularly true when dealing with data persistence within OpenSearch or when working with clusters of varying versions. As a result, we advise caution when considering this approach and generally recommend against it.
 
-
-### Storage Layout
+## Storage Layout
 
 OpenSearch will be organized in your state directory as follows:
 
-```plaintext
-localstack@machine % tree -L 4 ./volume/state
+{{< command >}}
+$ tree -L 4 ./volume/state
 ./volume/state
 ├── opensearch
 │   └── arn:aws:es:us-east-1:000000000000:domain
@@ -246,15 +137,14 @@ localstack@machine % tree -L 4 ./volume/state
 │       │   ├── backup
 │       │   ├── data
 │       │   └── tmp
-```
+{{< /command >}}
 
-### Advanced Security Options
-Since LocalStack 1.4.0, the OpenSearch and ElasticSearch services support "Advanced Security Options".
-Currently, the internal user database for OpenSearch domains is supported.
-ElasticSearch domains are currently not supported (neither via the OpenSearch nor the ElasticSearch service).
-There is no integration with IAM yet (but this might be implemented in later iterations, based on user feedback).
+## Advanced Security Options
 
-A secure OpenSearch domain can be spawned with this example CLI input:
+Both OpenSearch and Elasticsearch services offer **Advanced Security Options**. Presently, OpenSearch domains are equipped with support for an internal user database. However, Elasticsearch domains are not currently covered, whether through the OpenSearch or the Elasticsearch service. IAM support is also not yet available.
+
+A secure OpenSearch domain can be spawned with this example CLI input. Save it in a file named `opensearch_domain.json`.
+
 ```json
 {
     "DomainName": "secure-domain",
@@ -290,30 +180,35 @@ A secure OpenSearch domain can be spawned with this example CLI input:
 }
 ```
 
-It can be provisioned with the following aws(local) cli command, presumed the above CLI input is stored in a file called `opensearch_domain.json`:
+To provision it, use the following `awslocal` CLI command, assuming the aforementioned CLI input has been stored in a file named `opensearch_domain.json`:
+
 {{< command >}}
 $ awslocal opensearch create-domain --cli-input-json file://./opensearch_domain.json
 {{< /command >}}
 
-Once the domain is set up (`Processing: false`), the cluster can only be accessed with the given master user credentials (via HTTP basic auth):
+Once the domain setup is complete (`Processing: false`), the cluster can only be accessed with the given master user credentials, via HTTP basic authentication:
+
 {{< command >}}
 $ curl -u "admin:really-secure-passwordAa!1" http://secure-domain.us-east-1.opensearch.localhost.localstack.cloud:4566/_cluster/health
-{"cluster_name":"opensearch","status":"green",...}
 {{< /command >}}
-Any unauthorized requests will result in an HTTP response status code 401 (Unauthorized).
+
+The following output will be visible on your terminal:
+
+```json
+{"cluster_name":"opensearch","status":"green",...}
+```
+
+It's important to note that any unauthorized requests will yield an HTTP response with a status code of 401 (`Unauthorized`).
 
 ## Custom OpenSearch backends
 
-LocalStack downloads OpenSearch asynchronously the first time you run the `aws opensearch create-domain`, so you will get the response from LocalStack first and then (after download/install) you will have your OpenSearch cluster running locally.
-You may not want this, and instead use your already running OpenSearch cluster.
-This can also be useful when you want to run a cluster with a custom configuration that LocalStack does not support.
+LocalStack employs an asynchronous approach to download OpenSearch the first time you create an OpenSearch cluster. Consequently, you'll receive a prompt response from LocalStack initially, followed by the setup of your local OpenSearch cluster once the download and installation are completed.
 
-To customize the OpenSearch backend, you can start your own OpenSearch cluster locally and point LocalStack to it using the `OPENSEARCH_CUSTOM_BACKEND` environment variable.
-Note that only a single backend can be configured, meaning that you will get a similar behavior as when you  [re-use a single cluster instance](#re-using-a-single-cluster-instance).
+However, there might be scenarios where this behavior is not desirable. For instance, you may prefer to use an existing OpenSearch cluster that is already up and running. This approach can also prove beneficial when you require a cluster with a customized configuration that isn't supported by LocalStack.
 
-### Example
+To tailor the OpenSearch backend according to your needs, you can initiate your own local OpenSearch cluster and then direct LocalStack to utilize it through the `OPENSEARCH_CUSTOM_BACKEND` environment variable. It's important to bear in mind that only a single backend configuration is possible, resulting in behavior akin to the approach of [re-using a single cluster instance](#re-using-a-single-cluster-instance).
 
-The following shows a sample `docker-compose.yaml` file that contains a single-node OpenSearch cluster and a basic LocalStack setup.
+Here is a sample `docker-compose.yaml` file that contains a single-node OpenSearch cluster and a basic LocalStack setup.
 
 ```yaml
 version: "3.9"
@@ -339,17 +234,16 @@ services:
       - data01:/usr/share/opensearch/data
 
   localstack:
-    container_name: "${LOCALSTACK_DOCKER_NAME-localstack_main}"
+    container_name: "${LOCALSTACK_DOCKER_NAME:-localstack-main}"
     image: localstack/localstack
     ports:
-      - "4566:4566"
+      - "127.0.0.1:4566:4566"            # LocalStack Gateway
+      - "127.0.0.1:4510-4559:4510-4559"  # external services port range
     depends_on:
       - opensearch
     environment:
       - OPENSEARCH_CUSTOM_BACKEND=http://opensearch:9200
-      - DEBUG=${DEBUG- }
-      - PERSISTENCE=${PERSISTENCE- }
-      - DOCKER_HOST=unix:///var/run/docker.sock
+      - DEBUG=${DEBUG:-0}
     volumes:
       - "${LOCALSTACK_VOLUME_DIR:-./volume}:/var/lib/localstack"
       - "/var/run/docker.sock:/var/run/docker.sock"
@@ -359,127 +253,46 @@ volumes:
     driver: local
 ```
 
-1. Run docker compose:
+You can start the Docker Compose environment using the following command:
+
 {{< command >}}
 $ docker-compose up -d
 {{< /command >}}
 
-2. Create the OpenSearch domain:
+You can now create an OpenSearch cluster using the `awslocal` CLI:
+
 {{< command >}}
 $ awslocal opensearch create-domain --domain-name my-domain
-{
-    "DomainStatus": {
-        "DomainId": "000000000000/my-domain",
-        "DomainName": "my-domain",
-        "ARN": "arn:aws:es:us-east-1:000000000000:domain/my-domain",
-        "Created": true,
-        "Deleted": false,
-        "Endpoint": "my-domain.us-east-1.opensearch.localhost.localstack.cloud:4566",
-        "Processing": false,
-        "UpgradeProcessing": false,
-        "EngineVersion": "OpenSearch_1.1",
-        "ClusterConfig": {
-            "InstanceType": "m3.medium.search",
-            "InstanceCount": 1,
-            "DedicatedMasterEnabled": true,
-            "ZoneAwarenessEnabled": false,
-            "DedicatedMasterType": "m3.medium.search",
-            "DedicatedMasterCount": 1,
-            "WarmEnabled": false,
-            "ColdStorageOptions": {
-                "Enabled": false
-            }
-        },
-        "EBSOptions": {
-            "EBSEnabled": true,
-            "VolumeType": "gp2",
-            "VolumeSize": 10,
-            "Iops": 0
-        },
-        "AccessPolicies": "",
-        "SnapshotOptions": {
-            "AutomatedSnapshotStartHour": 0
-        },
-        "CognitoOptions": {
-            "Enabled": false
-        },
-        "EncryptionAtRestOptions": {
-            "Enabled": false
-        },
-        "NodeToNodeEncryptionOptions": {
-            "Enabled": false
-        },
-        "AdvancedOptions": {
-            "override_main_response_version": "false",
-            "rest.action.multi.allow_explicit_index": "true"
-        },
-        "ServiceSoftwareOptions": {
-            "CurrentVersion": "",
-            "NewVersion": "",
-            "UpdateAvailable": false,
-            "Cancellable": false,
-            "UpdateStatus": "COMPLETED",
-            "Description": "There is no software update available for this domain.",
-            "AutomatedUpdateDate": 0.0,
-            "OptionalDeployment": true
-        },
-        "DomainEndpointOptions": {
-            "EnforceHTTPS": false,
-            "TLSSecurityPolicy": "Policy-Min-TLS-1-0-2019-07",
-            "CustomEndpointEnabled": false
-        },
-        "AdvancedSecurityOptions": {
-            "Enabled": false,
-            "InternalUserDatabaseEnabled": false
-        },
-        "AutoTuneOptions": {
-            "State": "ENABLE_IN_PROGRESS"
-        }
-    }
-}
 {{< /command >}}
 
-3. If the `Processing` status is `true`, it means that the cluster is not yet healthy. You can run `decribe-domain` to receive the status:
+If the `Processing` status shows as `true`, the cluster isn't fully operational yet. You can use the `describe-domain` command to retrieve the current status:
+
 {{< command >}}
 $ awslocal opensearch describe-domain --domain-name my-domain
 {{< /command >}}
 
-4. Check the cluster health endpoint and create indices:
+You can now verify cluster health and set up indices:
+
 {{< command >}}
 $ curl my-domain.us-east-1.opensearch.localhost.localstack.cloud:4566/_cluster/health | jq
-{
-  "name": "host-pc",
-  "cluster_name": "opensearch",
-  "cluster_uuid": "DMN-2TlwRkuhMH4aRRqrkA",
-  "version": {
-    "distribution": "opensearch",
-    "number": "1.1.0",
-    "build_type": "tar",
-    "build_hash": "15e9f137622d878b79103df8f82d78d782b686a1",
-    "build_date": "2021-10-04T21:29:03.079792Z",
-    "build_snapshot": false,
-    "lucene_version": "8.9.0",
-    "minimum_wire_compatibility_version": "6.8.0",
-    "minimum_index_compatibility_version": "6.0.0-beta1"
-  },
-  "tagline": "The OpenSearch Project: https://opensearch.org/"
-}
 {{< /command >}}
 
-5. Create an example index:
+The output will provide insights into the cluster's health and version information.
+
+Finally create an example index using the following command:
+
 {{< command >}}
 $ curl -X PUT my-domain.us-east-1.opensearch.localhost.localstack.cloud:4566/my-index
-{"acknowledged":true,"shards_acknowledged":true,"index":"my-index"}
 {{< /command >}}
 
+## Limitations
 
-## Differences to AWS
+Internally, LocalStack makes use of the [OpenSearch Python client 2.x](https://github.com/opensearch-project/opensearch-py). The functionalities marked as deprecated in OpenSearch 1.x and subsequently removed in OpenSearch 2.x may not operate reliably when interacting with OpenSearch 1.x clusters through LocalStack. You can refer to the [compatibility documentation](https://github.com/opensearch-project/opensearch-py/blob/main/COMPATIBILITY.md) provided by the [OpenSearch Python client repository](https://github.com/opensearch-project/opensearch-py).
 
-* By default, AWS only sets the `Endpoint` attribute of the cluster status once the cluster is up.
-  LocalStack will return the endpoint immediately, but keep `Processing = "true"` until the cluster has been started.
-* The `CustomEndpointOptions` allows arbitrary endpoint URLs, which is not allowed in AWS.
-
+AWS typically populates the `Endpoint` attribute of the cluster status only after the cluster is fully operational. In contrast, LocalStack provides the endpoint information immediately but retains `Processing = "true"` until the cluster initialization is complete.
+    
+The `CustomEndpointOptions` in LocalStack offers the flexibility to utilize arbitrary endpoint URLs, a feature that diverges from the constraints imposed by AWS.
 
 ## Troubleshooting
 
-If you are using the `OPENSEARCH_ENDPOINT_STRATEGY=domain` (which is the default) and are having issues with resolving the subdomains, [please check if your DNS blocks rebind queries]({{< ref "dns-server#dns-rebind-protection" >}}).
+If you encounter difficulties resolving subdomains while employing the `OPENSEARCH_ENDPOINT_STRATEGY=domain` (the default setting), it's advisable to investigate whether your DNS configuration might be obstructing rebind queries. For further insights on addressing this issue, refer to the section on [DNS rebind protection]({{< ref "dns-server#dns-rebind-protection" >}}).
